Fixed text align, paddings

--- a/sass/blocks/attractions.scss
+++ b/sass/blocks/attractions.scss
@@ -11,7 +11,7 @@
 }
 
 .attractions__item {
-  padding: 0 20px;
+  padding: 42px 20px 22px;
   flex-grow: 1;
 }
 
