--- a/sass/blocks/content-title.scss
+++ b/sass/blocks/content-title.scss
@@ -3,4 +3,5 @@
   font-weight: 700;
   font-size: 2.1rem;
   line-height: 1.23;
+  text-align: center;
 }
