--- a/sass/blocks/title.scss
+++ b/sass/blocks/title.scss
@@ -1,5 +1,17 @@
+.title {
+  position: relative;
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 100%;
+    height: 20px;
+    background-color: #fff;
+  }
+}
+
 .title__wrapper {
-  padding: 0 20px;
+  padding: 40px 20px 20px;
 }
 
 // content-title styles for title block
